k8s/etapa-3.7/07-locust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: tipsbank-monitoring
spec:
  selector:
    app: locust
  ports:
    - name: http
      port: 8089
      targetPort: 8089
